crates/cli/tests/snapshots/cli__envelope_init_success.snap
---
source: crates/cli/tests/cli.rs
expression: json
---
{
  "data": {
    "artifact_root": ".speclink",
    "project_id": "<project_id>",
    "state_root": ".git/speclink"
  },
  "ok": true,
  "requestId": "<requestId>",
  "warnings": []
}
